--- a/context/src/integration-test/resources/application-test.yaml
+++ b/context/src/integration-test/resources/application-test.yaml
@@ -1,21 +1,21 @@
 spring:
-  config:
-    import:
-      - application-context-data.yaml
-
----
-spring:
-  config:
-    activate:
-      on-profile: local
   jpa:
+    open-in-view: false
+    generate-ddl: true
+    show-sql: true
     hibernate:
       ddl-auto: create
     properties:
       hibernate:
+        globally_quoted_identifiers: true
+        format_sql: true
+        generate_statistics: true
+        session.events.log.LOG_QUERY_SLOWER_THAN_MS: 10
+        default_batch_fetch_size: 500
         dialect: org.hibernate.dialect.MySQLDialect
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:fan_lounge;MODE=MySQL;
     username: sa
     password:
+
