--- a/context/src/main/resources/application-context-data.yaml
+++ b/context/src/main/resources/application-context-data.yaml
@@ -1,7 +1,7 @@
 spring:
   jpa:
     open-in-view: false
-    generate-ddl: true
+    generate-ddl: false
     show-sql: true
     hibernate:
       ddl-auto: validate
@@ -12,3 +12,21 @@ spring:
         generate_statistics: true
         session.events.log.LOG_QUERY_SLOWER_THAN_MS: 10
         default_batch_fetch_size: 500
+
+---
+spring:
+  config:
+    activate:
+      on-profile: local
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:fan_md;MODE=MySQL;
+    username: sa
+    password:
