--- a/context/src/integration-test/resources/application-test.yaml
+++ b/context/src/integration-test/resources/application-test.yaml
@@ -1,21 +1,20 @@
 spring:
+  config:
+    activate:
+      on-profile: test
+    import: application-context.yaml
   jpa:
-    open-in-view: false
     generate-ddl: true
     show-sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: create-drop
     properties:
       hibernate:
-        globally_quoted_identifiers: true
         format_sql: true
-        generate_statistics: true
-        session.events.log.LOG_QUERY_SLOWER_THAN_MS: 10
-        default_batch_fetch_size: 500
-        dialect: org.hibernate.dialect.MySQLDialect
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:fan_md;MODE=MySQL;
-    username: sa
-    password:
+        globally_quoted_identifiers: true
 
+logging:
+  level:
+    org.hibernate:
+      #stat: DEBUG
+      SQL: DEBUG
