--- a/context/src/main/resources/application-context-data.yaml
+++ b/context/src/main/resources/application-context-data.yaml
@@ -17,7 +17,7 @@ spring:
 spring:
   config:
     activate:
-      on-profile: local
+      on-profile: local, test
   jpa:
     generate-ddl: true
     hibernate:
@@ -25,6 +25,10 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
+  data:
+    redis:
+      host: localhost
+      port: 6379
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:fan_md;MODE=MySQL;
