--- a/application-admin-api/src/main/resources/application.yaml
+++ b/application-admin-api/src/main/resources/application.yaml
@@ -10,6 +10,7 @@ spring:
   config:
     import:
       - application-context.yaml
+      - application-external.yaml
   autoconfigure.exclude: org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
 
 ---
