--- a/application-admin-api/src/main/resources/application.yaml
+++ b/application-admin-api/src/main/resources/application.yaml
@@ -12,7 +12,12 @@ spring:
       - application-context.yaml
       - application-external.yaml
   autoconfigure.exclude: org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
-
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 21MB
+  jackson:
+    default-property-inclusion: non_null
 ---
 spring:
   config:
