--- a/application-md-api/src/main/resources/application.yaml
+++ b/application-md-api/src/main/resources/application.yaml
@@ -2,6 +2,7 @@ server:
   shutdown: graceful
   error.whitelabel.enabled: false
 
+
 spring:
   profiles:
     default: local
@@ -11,7 +12,15 @@ spring:
     import:
       - application-context.yaml
   autoconfigure.exclude: org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,prometheus
+  endpoint:
+    health:
+      probes:
+        enabled: true
 ---
 spring:
   config:
