--- a/context/src/main/resources/application-context.yaml
+++ b/context/src/main/resources/application-context.yaml
@@ -2,6 +2,8 @@ spring:
   config:
     import:
       - application-context-data.yaml
+      - application-context-logging.yaml
+      - application-context-gcp.yaml
 
 ---
 spring:
