FAN-245 cloud 환경이 아닌곳에는 SecretManagerResolver가 동작하지 않도록 수정

--- a/context/src/main/resources/application-context-gcp.yaml
+++ b/context/src/main/resources/application-context-gcp.yaml
@@ -1,9 +1,5 @@
 spring:
   config:
-    import: sm://
----
-spring:
-  config:
     activate:
       on-profile: local, test
   cloud:
@@ -15,3 +11,8 @@ spring:
       secretmanager:
         enabled: false
 ---
+spring:
+  config:
+    activate:
+      on-profile: sandbox, cbt, prod
+    import: sm://
