FAN-245 github-actions action-ref-update OIDC를 위한 permission 변경

--- a/.github/workflows/action-ref-update.yml
+++ b/.github/workflows/action-ref-update.yml
@@ -30,6 +30,13 @@ jobs:
       REF_NAME: ${{ inputs.refName }}
       REF_UPLOAD_DESTINATION: ${{ inputs.refUploadDestination }}
       TARGET_PATH: ${{ inputs.targetPath }}
+    # These permissions are needed to interact with GitHub's OIDC Token endpoint.
+    permissions:
+      id-token: write
+      contents: read
+      checks: write
+      issues: read
+      pull-requests: write
     steps:
       - name: Checkout Manifests
         uses: actions/checkout@v3
