FAN-245 github-actions action-ref-update Bucket이 환경변수를 사용하지 못하는 현상 수정

--- a/.github/workflows/action-ref-update.yml
+++ b/.github/workflows/action-ref-update.yml
@@ -59,7 +59,7 @@ jobs:
 
       - name: Download Reference from Cloud Storage Bucket
         run: |
-          gsutil -m cp -r 'gs://$REF_UPLOAD_DESTINATION' ./tmp/$REF_NAME
+          gsutil -m cp -r gs://$REF_UPLOAD_DESTINATION ./tmp/$REF_NAME
 
       - name: Update Reference
         run: |
